--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,8 @@
   <artifactId>qa_yandex_sprint7</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
         <!-- версия Aspectj -->
     <aspectj.version>1.9.7</aspectj.version>
         <!-- версия Allure -->
